--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ $RECYCLE.BIN/
 
 .tmp
 *.log
-*.sql
+#*.sql
 *.sqlite
 *.sqlite3
 
@@ -106,7 +106,7 @@ coverage
 # Strapi
 ############################
 
-.env
+#.env
 license.txt
 exports
 *.cache
