--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.9.1",
     "@strapi/plugin-users-permissions": "4.9.1",
+    "@strapi/provider-upload-aws-s3": "^4.11.7",
     "@strapi/strapi": "4.9.1",
     "mysql": "2.18.1",
     "stripe": "^12.3.0"
